<resources>
    <string name="app_name">Activity Launcher</string>
    <string name="help">Please push one of these buttons</string>
    <string name="do_something">Your Options</string>
    <string name="launch_Act2">Launch Activity 2</string>
    <string name="launch_Act3">Launch Activity 3</string>
    <string name="launch_Act4">Launch Activity 4</string>
    <string name="launch_Act5">Launch Activity 5</string>
    <string name="launch_browser">Launch Browser</string>
    <string name="launch_geo">Launch Google Map</string>
    <string name="result_for_act1">Activity Result:</string>
    <string name="title_act_activity2">Activity 2</string>
    <string name="title_act_activity3">Activity 3</string>
    <string name="title_act_activity4">Activity 4</string>
    <string name="title_act_activity5">Activity 5</string>
    <string name="act2_btn1">Activity 2: One, 1, uno, un/une</string>
    <string name="act2_btn2">Activity 2: Two, 2 , due, deux</string>
    <string name="act2_text_top">Return and send one of these messages</string>
    <string name="nodata">No Data Received</string>
    <string name="generic_btn_return">Return</string>
    <string name="act5_instruc">Hit the back button to end.</string>

</resources>
