<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mdthai.lab5.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginBottom="16dp"
        android:textSize="@dimen/normal_text_size"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_something"
        android:textSize="@dimen/normal_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_end_size">

        <Button
            android:id="@+id/l_act2_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_Act2"/>
        <Button
            android:id="@+id/l_act3_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_Act3"/>

        <Button
            android:id="@+id/l_browser_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_browser"/>
        <Button
            android:id="@+id/l_geo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_geo"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_for_act1"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginBottom="@dimen/margin_end_size"/>

    <TextView
        android:id="@+id/act1_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/color_text_Result"/>




</LinearLayout>
